# source-codes

./: .gitignore  20201104-cpp-hw.cpp  20201211_py_practice.py  20201223_cpp_hw.py  20201223_py_hw.py  20210310_py_hw.py  20210317_py_hw.py  20210324_py_hw.py  20210331_py_hw.py  20210414_py_hw.py  20210519_py_hw.py  ConvertLetterCase.cpp  DicePointGenerator.py  Get-WindowsLog.ps1  Get_GCD.py  Github Pages簡易使用.md  Invoke-GitDiectory.ps1  Invoke-GithubDiectory.ps1  LOTTE12H.js  Matrix_LeftTurn.py  Minesweeper.py  ModeNumber.py  Multiplicationz_Table.py  NCUT_s3A917045_1127_HW.java  Notify-Toast.ps1  Notify-kasperskyViriusReport.ps1  Prime factorization.py  Prime_factorization.py  QuickSort.ps1  README.md  Remove-DefaultApp.bat  Test-MSSQL.ps1  WhackMole.java  WindowsChocolateSetDefaultAppInstallDirectroy.md  YoutubePlayListQuickDownload.py  ZuvioEndedQuestionsAnswerSelector.js  bubble_sort.py  jsFuncDecorator.js  localDB.sql  matrix_add.py  (+9 more)
20201014-py_hw/: input.txt  solve2.py
20201014_py_hw/: solve1.py
20201021_py_hw/: input.txt  main.py
20201202_cpp_hw/: 20201202_cpp_hw.sln
20201202_py_hw/: books.txt  borrow.txt  main.py  member.txt
20201209_cpp_hw/: 20201209_cpp_hw.sln
20201209_py_hw/: eng.txt  main.py
20201216_cpp_hw/: 20201216_cpp_hw.sln
20201216_py_hw/: main.py  題目.txt
20201217_cpp_practice/: Project1.sln
20201223_cpp_hw/: 20201223_cpp_hw.sln
20201230_cpp_hw/: 20201230_cpp_hw.sln  20201230_cpp_hw.vcxproj  Source.cpp
opencvPractice/: CMakeLists.txt  main.cpp  readme.md
opencvPractice/chessBoard/: CMakeLists.txt  chessBoard.cpp  chessBoard.hpp
(+1187 files in other folders)
